# wipi

./: .gitignore  LICENSE  Makefile  README.adoc  pyproject.toml
etc/: config.json  logging.ini
etc/nginx/: wipi
etc/systemd/system/: wipi.service
wipi/: log.py  scheduler.py  util.py
wipi/api/: __init__.py  backend.py  routes.py  shared_controller.py
wipi/controller/: __init__.py  interface.py  mpu6050.py  relay_board.py  system.py
www/: index.html  oboe-browser.js  wipi.js
www/application/case_washer/: index.html
www/controller/: mpu6050.html  relay_board.html  system.html
